# velox

./: .gitignore  CMakeLists.txt
.github/workflows/: java-format.yml  java-ut-cpp.yml  java-ut-java.yml  unittest.yml
CMake/resolve_dependency_modules/: gflags.cmake  gtest.cmake
java/: README.md
java/velox4j/: pom.xml
java/velox4j/src/main/cpp/test/: CMakeLists.txt
java/velox4j/src/main/cpp/test/velox4j/iterator/: BlockingQueueTest.cc
java/velox4j/src/main/cpp/test/velox4j/query/: QuerySerdeTest.cc  QueryTest.cc
java/velox4j/src/main/cpp/test/velox4j/test/: Init.h
scripts/: setup-centos7.sh  setup-helper-functions.sh  setup-ubuntu.sh
velox/: CMakeLists.txt
velox/buffer/: Buffer.h
velox/core/: Expressions.cpp  Expressions.h  PlanNode.cpp  PlanNode.h  QueryConfig.h  QueryCtx.h
velox/docs/: configs.rst
velox/exec/: Aggregate.cpp  Aggregate.h  AggregateCompanionAdapter.cpp  AggregateFunctionAdapter.h  ArrowStream.cpp  ArrowStream.h  CMakeLists.txt  Expand.cpp  GroupingSet.cpp  GroupingSet.h  HashAggregation.cpp  HashAggregation.h  HashBuild.cpp  HashBuild.h  HashProbe.cpp  HashProbe.h  HashTable.cpp  HashTable.h  LocalPlanner.cpp  Operator.cpp  OrderBy.cpp  RowContainer.cpp  RowContainer.h  SharedArbitrator.cpp  SharedArbitrator.h  SortBuffer.cpp  SortWindowBuild.cpp  Spiller.cpp  Spiller.h  StreamingWindow.cpp  StreamingWindow.h  TableScan.cpp  TableScan.h  Task.cpp  Task.h  TopNRowNumber.cpp  Window.cpp  Window.h  WindowPartition.cpp
velox/expression/: CastExpr-inl.h  CastExpr.cpp  CastExpr.h  ExprCompiler.cpp  ExprToSubfieldFilter.cpp
(+472 files in other folders)
